--- a/app/design/frontend/default/default/template/customer/account/dashboard.phtml
+++ b/app/design/frontend/default/default/template/customer/account/dashboard.phtml
@@ -30,7 +30,7 @@
     }
 ?>
     <!--  -->
-    <div class="club_login">
+    <div class="club_login page page_club">
         <div class="club_tit ">
             <h2><?php echo $this->__("Member<br />Information")?></h2>
         </div>
