--- a/app/design/frontend/default/default/template/newsletter/subscribe.phtml
+++ b/app/design/frontend/default/default/template/newsletter/subscribe.phtml
@@ -24,25 +24,42 @@
  * @license     http://opensource.org/licenses/afl-3.0.php  Academic Free License (AFL 3.0)
  */
 ?>
+hello world
+<div class="club-login page-club">
+    <?php if($this->getTitle()): ?>
+    <div class="club_tit ">
+        <h2><?php echo $this->getTitle() ?></h2>
+    </div>
+    <?php endif; ?>
+    <div class="club_ecoupon_center cs-clear">
+        
+        <?php echo $this->getChildHtml("lily_customer_nav")?>
 
-    <form action="<?php echo $this->getFormActionUrl() ?>" method="post" id="newsletter-validate-detail">
-        <div class="block-content">
-            <div class="form-subscribe-header">
-                <label for="newsletter"><?php echo $this->__('Sign Up for Our Newsletter: ') ?></label>
-            </div>
-            <div class="input-box">
-               <input type="text" name="email" id="newsletter" title="<?php echo $this->__('Sign up for our newsletter') ?>" class="input-text required-entry validate-email" />
-				<div class="actions">
-					<button type="submit" title="<?php echo $this->__('Subscribe') ?>" class="button"><span><span><?php echo $this->__('Subscribe') ?></span></span></button>
-				</div>
+        <div class="club_ecoupon_com club_meminfo">
 
-		  </div>
+            <form action="<?php echo $this->getFormActionUrl() ?>" method="post" id="newsletter-validate-detail">
+                <div class="block-content">
+                    <div class="form-subscribe-header">
+                        <label for="newsletter"><?php echo $this->__('Sign Up for Our Newsletter: ') ?></label>
+                    </div>
+                    <div class="input-box">
+                       <input type="text" name="email" id="newsletter" title="<?php echo $this->__('Sign up for our newsletter') ?>" class="input-text required-entry validate-email" />
+                        <div class="actions">
+                            <button type="submit" title="<?php echo $this->__('Subscribe') ?>" class="button"><span><span><?php echo $this->__('Subscribe') ?></span></span></button>
+                        </div>
 
+                  </div>
+
+                </div>
+            </form>
+            <script type="text/javascript">
+            //<![CDATA[
+                var newsletterSubscriberFormDetail = new VarienForm('newsletter-validate-detail');
+            //]]>
+            </script>
         </div>
-    </form>
-    <script type="text/javascript">
-    //<![CDATA[
-        var newsletterSubscriberFormDetail = new VarienForm('newsletter-validate-detail');
-    //]]>
-    </script>
+
+    </div>
+</div>
+
 
