--- a/app/design/frontend/base/default/template/customer/form/newsletter.phtml
+++ b/app/design/frontend/base/default/template/customer/form/newsletter.phtml
@@ -24,30 +24,42 @@
  * @license     http://opensource.org/licenses/afl-3.0.php  Academic Free License (AFL 3.0)
  */
 ?>
-<div class="page-title">
-    <h1><?php echo $this->__('Newsletter Subscription') ?></h1>
-</div>
-<?php echo $this->getMessagesBlock()->getGroupedHtml() ?>
-<?php echo $this->getChildHtml('form_before')?>
-<form action="<?php echo $this->getAction() ?>" method="post" id="form-validate">
-    <div class="fieldset">
-        <?php echo $this->getBlockHtml('formkey')?>
-        <h2 class="legend"><?php echo $this->__('Newsletter Subscription') ?></h2>
-        <ul class="form-list">
-            <li class="control"><input type="checkbox" name="is_subscribed" id="subscription" value="1" title="<?php echo $this->__('General Subscription') ?>"<?php if($this->getIsSubscribed()): ?> checked="checked"<?php endif; ?> class="checkbox" /><label for="subscription"><?php echo $this->__('General Subscription') ?></label></li>
+<div class="club-login page-club">
+    <?php if($this->getTitle()): ?>
+    <div class="club_tit ">
+        <h2><?php echo $this->__('Newsletter Subscription') ?></h2>
+    </div>
+    <?php endif; ?>
+    <div class="club_ecoupon_center cs-clear">
+        
+        <?php echo $this->getChildHtml("lily_customer_nav")?>
+
+        <div class="club_ecoupon_com club_meminfo">
+            <?php echo $this->getMessagesBlock()->getGroupedHtml() ?>
+            <?php echo $this->getChildHtml('form_before')?>
+            <form action="<?php echo $this->getAction() ?>" method="post" id="form-validate">
+                <div class="fieldset">
+                    <?php echo $this->getBlockHtml('formkey')?>
+                    <h2 class="legend"><?php echo $this->__('Newsletter Subscription') ?></h2>
+                    <ul class="form-list">
+                        <li class="control"><input type="checkbox" name="is_subscribed" id="subscription" value="1" title="<?php echo $this->__('General Subscription') ?>"<?php if($this->getIsSubscribed()): ?> checked="checked"<?php endif; ?> class="checkbox" /><label for="subscription"><?php echo $this->__('General Subscription') ?></label></li>
+                        <?php /* Extensions placeholder */ ?>
+                        <?php echo $this->getChildHtml('customer.form.newsletter.extra')?>
+                    </ul>
+                </div>
+                <div class="buttons-set">
+                    <p class="back-link"><a href="<?php echo $this->escapeUrl($this->getBackUrl()) ?>"><small>&laquo; </small><?php echo $this->__('Back') ?></a></p>
+                    <button type="submit" title="<?php echo $this->__('Save') ?>" class="button"><span><span><?php echo $this->__('Save') ?></span></span></button>
+                </div>
+            </form>
             <?php /* Extensions placeholder */ ?>
-            <?php echo $this->getChildHtml('customer.form.newsletter.extra')?>
-        </ul>
+            <?php echo $this->getChildHtml('customer.form.newsletter.extra2')?>
+            <script type="text/javascript">
+            //<![CDATA[
+                var dataForm = new VarienForm('form-validate', true);
+            //]]>
+            </script>
+        </div>
     </div>
-    <div class="buttons-set">
-        <p class="back-link"><a href="<?php echo $this->escapeUrl($this->getBackUrl()) ?>"><small>&laquo; </small><?php echo $this->__('Back') ?></a></p>
-        <button type="submit" title="<?php echo $this->__('Save') ?>" class="button"><span><span><?php echo $this->__('Save') ?></span></span></button>
-    </div>
-</form>
-<?php /* Extensions placeholder */ ?>
-<?php echo $this->getChildHtml('customer.form.newsletter.extra2')?>
-<script type="text/javascript">
-//<![CDATA[
-    var dataForm = new VarienForm('form-validate', true);
-//]]>
-</script>
+</div>
+
