--- a/app/design/frontend/default/default/layout/customer.xml
+++ b/app/design/frontend/default/default/layout/customer.xml
@@ -300,7 +300,9 @@ Customer account address book
         <!-- Mage_Customer -->
         <update handle="customer_account"/>
         <reference name="my.account.wrapper">
-            <block type="customer/address_book" name="address_book" template="customer/address/book.phtml"/>
+            <block type="customer/address_book" name="address_book" template="customer/address/book.phtml">
+                <block type="core/template" name="lily_customer_nav_block" as="lily_customer_nav" template="page/html/lily_customer_nav.phtml" />
+            </block>
         </reference>
     </customer_address_index>
 
