--- a/app/design/frontend/base/default/template/points/checkout/success.phtml
+++ b/app/design/frontend/base/default/template/points/checkout/success.phtml
@@ -1,3 +1,4 @@
+<div class="club_ecoupon_center cs-clear">
 <?php echo $this->getChildHtml("lily_customer_nav")?>
 
 <div class="points_checkout">
@@ -21,4 +22,5 @@
 <?php echo $this->getLayout()->createBlock('cms/block')->setBlockId('instruction')->toHtml(); ?>
 	
 	</div>
+</div>
 </div>
