--- a/skin/frontend/default/default/css/styles.css
+++ b/skin/frontend/default/default/css/styles.css
@@ -291,7 +291,7 @@ p.required { font-size:11px; text-align:right; color:#EB340A; }
 
 .messages,
 .messages ul { list-style:none !important; margin:0 !important; padding:0 !important; }
-.messages { width:100%; overflow:hidden; }
+.messages {overflow:hidden; }
 .messages li { margin:0 0 10px !important; }
 .messages li li { margin:0 0 3px !important; }
 .error-msg,
