--- a/app/design/frontend/base/default/template/points/order/info.phtml
+++ b/app/design/frontend/base/default/template/points/order/info.phtml
@@ -109,10 +109,10 @@ jQuery(document).ready(function($){
 			success:function(data) {    
 				if(data.status != ""){
 					// $('#query_status').append(data.status);
-					if(data.ship_note != ""){
-						$('#status_result').html(data.status + '<?php echo $this->__('快递信息：'); ?>' + data.ship_note);
+					if(typeof data.ship_note != "undefined"){
+						$('#status_result').html(data.status + '&nbsp;<?php echo $this->__('快递信息：'); ?>&nbsp' + data.ship_note);
 					}else{
-						$('#status_result').html(data.status);
+						$('#status_result').html(data.status + '&nbsp;<?php echo $this->__('快递信息：'); ?>' + " &nbsp; " + "无") ;
 					}
 				}
 			},
