--- a/app/design/frontend/base/default/template/lily/customer/form/register.phtml
+++ b/app/design/frontend/base/default/template/lily/customer/form/register.phtml
@@ -86,7 +86,7 @@
 
                         <div class="club_memberreg_fi cs-clear">
                             <label><?php echo $this->__('Confirm Password') ?></label>
-                            <input type="password" name="password" id="confirmation" placeholder="<?php echo $this->__('Confirm Password') ?>*" title="<?php echo $this->__('Confirm Password') ?>" class="club_login_ipt required-entry validate-cpassword" />
+                            <input type="password" name="confirmation" id="confirmation" placeholder="<?php echo $this->__('Confirm Password') ?>*" title="<?php echo $this->__('Confirm Password') ?>" class="club_login_ipt required-entry validate-cpassword" />
                             <span class="club_memberreg_tips"><?php echo $this->__('Please input again')?></span>
                         </div>
 
