--- a/app/design/frontend/default/default/template/catalog/product/view.phtml
+++ b/app/design/frontend/default/default/template/catalog/product/view.phtml
@@ -106,6 +106,7 @@
                         <?php elseif ($_product->isSaleable() && $this->hasOptions()):?>
                             <?php //echo $this->getChildChildHtml('container2', '', true, true) ?>
                         <?php endif;?>
+                        <?php echo $this->getChildChildHtml('container1', '', true, true) ?>
                         <?php echo $this->getChildChildHtml('container2', '', true, true) ?>
                     </div>
                     <div class="product-intro">
