--- a/skin/frontend/base/default/css/lily/css/club.css
+++ b/skin/frontend/base/default/css/lily/css/club.css
@@ -179,6 +179,7 @@
 /* Mobile Used
 ================================================================================================= */
 .dis_mobile { display: none }
+.club_ecoupon_nav_m {display:none;}
 @media screen and (max-width:640px) {
 	.dis_mobile { display: block }
     .wrap {margin:0!important;}
@@ -192,7 +193,7 @@
     .club_login_txt,
     .club_member_rule,
     .club_giftcards,
-    .club_delivery_txt{width:420px;font-size: 18px;margin: 0 auto}
+    .club_delivery_txt{width:420px;font-size: 20px;margin: 0 auto}
     .club_login_txt {margin:0;}
     .club_member_table td, .club_member_table th{padding:10px 5px;}
     .club_ecoupon_nav{position: absolute;top: 0;left:0;display: none}
@@ -251,4 +252,18 @@
 
     .product-view .product-img-box {width:90%;margin:0 0 20px 5%;float:none;}
     .product-view .product-shop {float:none;width:auto;clear:both;padding:20px 0 0;}
+
+
+    .header {height:0!important;}
+    .club_ecoupon_nav_m {display:block;position: fixed;top:12px;left:20%;width:70%;font-size:20px;}
+    .club_welcome_m {background:#000;color:#fff;font-weight:bold;height:100px;line-height:100px;padding:0 40px;}
+    .club_navlist_m {display:none;background:#fff;padding:20px 0 20px 40px;color:#000;}
+    .club_navlist_m.open {display:block;}
+    .club_navlist_m a {display:block;margin:15px 0;}
+    .club_logout_m {margin-top:40px;font-weight:bold;}
+
+    .club_memberreg_fi_code .club_memberreg_tips {left:390px;display:block;}
+    .club_memberreg_fi_code .club_login_ipt {width:200px;}
+    .club_memberreg_fi_code .club_member_sub {width:184px;}
+    .club_memberreg_fi .club_login_ipt_address {margin:10px 0 0 130px;}
 }
