产品搜索页面

--- a/app/design/frontend/base/default/template/lily/customer/form/register.phtml
+++ b/app/design/frontend/base/default/template/lily/customer/form/register.phtml
@@ -100,7 +100,7 @@
                         <div class="club_memberreg_fi cs-clear">
                             <label><?php echo $this->__('Birthday') ?></label>
                             <input type="text" name="birth" id="birth" placeholder="<?php echo $this->__('Birthday') ?>*" value="" title="<?php echo $this->__('Birthday') ?>" class="club_login_ipt required-entry" />
-                            <span class="club_memberreg_tips"><?php echo $this->__('Please input correctly to get a birthday benefit')?></span>
+                            <span class="club_memberreg_tips"><?php echo $this->__('Please input correctly to get a birthday benefit')?> (ex, 1988-02-24)</span>
                         </div>
 
                         <div class="club_memberreg_fi cs-clear">
@@ -116,8 +116,8 @@
                         <div class="club_memberreg_fi cs-clear">
                             <label><?php echo $this->__('Gender') ?></label>
                             <select name="gender" id="gender" placeholder="<?php echo $this->__('Gender') ?>*" class="club_login_ipt required-entry">
-                                <option value="1"><?php echo $this->__("Male")?></option>
-                                <option value="2"><?php echo $this->__("Female")?></option>
+                                <option value="123"><?php echo $this->__("Male")?></option>
+                                <option value="124"><?php echo $this->__("Female")?></option>
                             </select>
 
                             <span class="club_memberreg_tips"><?php echo $this->__('Please select gender')?></span>
