--- a/app/design/frontend/base/default/template/catalogsearch/result.phtml
+++ b/app/design/frontend/base/default/template/catalogsearch/result.phtml
@@ -51,12 +51,16 @@
 <div class="page-title">
     <h1><?php echo ($this->getHeaderText() || $this->getHeaderText() === false) ? $this->getHeaderText() : $this->__("Search results for '%s'", $this->helper('catalogsearch')->getEscapedQueryText()) ?></h1>
 </div>
-<p class="note-msg">
-    <?php echo ($this->getNoResultText()) ? $this->getNoResultText() : $this->__('Your search returns no results.') ?>
-    <?php if ($messages = $this->getNoteMessages()):?>
-        <?php foreach ($messages as $message):?>
-        <br /><?php echo $message?>
-        <?php endforeach;?>
+<div class="club_ecoupon_center cs-clear">
+<?php echo $this->getChildHtml("lily_customer_nav")?>
+<div class="club_ecoupon_com club_point">
+    <p class="note-msg">
+        <?php echo ($this->getNoResultText()) ? $this->getNoResultText() : $this->__('Your search returns no results.') ?>
+        <?php if ($messages = $this->getNoteMessages()):?>
+            <?php foreach ($messages as $message):?>
+            <br /><?php echo $message?>
+            <?php endforeach;?>
+        <?php endif; ?>
+    </p>
     <?php endif; ?>
-</p>
-<?php endif; ?>
+</div></div>
