--- a/app/design/frontend/base/default/template/lily/customer/form/register.phtml
+++ b/app/design/frontend/base/default/template/lily/customer/form/register.phtml
@@ -99,7 +99,7 @@
 
                         <div class="club_memberreg_fi cs-clear">
                             <label><?php echo $this->__('Birthday') ?></label>
-                            <input type="text" name="birth" id="birth" placeholder="<?php echo $this->__('Birthday') ?>*" value="" title="<?php echo $this->__('Birthday') ?>" class="club_login_ipt required-entry" />
+                            <input type="text" name="dob" id="birth" placeholder="<?php echo $this->__('Birthday') ?>*" value="" title="<?php echo $this->__('Birthday') ?>" class="club_login_ipt required-entry" />
                             <span class="club_memberreg_tips"><?php echo $this->__('Please input correctly to get a birthday benefit')?> (ex, 1988-02-24)</span>
                         </div>
 
