--- a/app/design/frontend/base/default/template/points/shipping.phtml
+++ b/app/design/frontend/base/default/template/points/shipping.phtml
@@ -1,5 +1,5 @@
 <?php $shipping_province = $this->getShippingProvince();?>
-<?php /* ?>
+<?php  ?>
 <div class="content-wrapper address-list">
 <div class="content">
 	
@@ -69,7 +69,7 @@
 		</div>
 		</div>
 		</div>
-		<?php */ ?>
+		<?php  ?>
 		<div class="content-wrapper shipping-method">
 <div class="content">
 	
@@ -81,14 +81,12 @@
 				<input type="radio" name="shipping_method" value="shop_mentioning" id="shop_mentioning" class="input-text" title="店铺自取，免运费<?php //echo $this->__('Shop Mentioning') ?>" />
 			</div>
 		</li>
-		<?php /* ?>
 		<li>	
 			<div class="input-box">
-				<label for="express"><?php //echo $this->__('Express') ?>直接快递，运费需花1500积分</label>
+				<label for="express"><?php echo $this->__('Express using 1500 points') ?></label>
 				<input type="radio" name="shipping_method" value="express" id="express" class="input-text" title="<?php //echo $this->__('Express') ?>直接快递，运费需花1500积分" />
 			</div>
 		</li>
-		<?php */ ?>
 	</ul>
 	<div class="shipping_addition" style="display:none;">
 		<div class="mentioning_shops">
