--- a/app/design/frontend/default/default/template/customer/form/edit.phtml
+++ b/app/design/frontend/default/default/template/customer/form/edit.phtml
@@ -49,7 +49,13 @@
                     <ul class="club_meminfolist2">
                         <li><span><?php echo $this->__("VIP Card")?></span><strong><?php echo $this->htmlEscape($this->getCustomer()->getVipCard()) ?></strong></li>
                         <li><span><?php echo $this->__("VIP level")?></span><strong><?php echo $this->htmlEscape($this->getCustomer()->getVipLevel()) ?></strong></li>
-                        <li><span><?php echo $this->__("Join date")?></span><strong><?php echo $this->htmlEscape(date('Y-m-d', strtotime($this->getCustomer()->getCardValidity()))) ?></strong></li>
+                        <li><span><?php echo $this->__("Join date")?></span><strong>
+                            <?php if ($this->getCustomer()->getCardValidity() <= 0) : ?>
+                                <?php echo $this->__("No Actived")?>
+                            <?php else: ?>
+                                <?php echo $this->htmlEscape(date('Y-m-d', strtotime($this->getCustomer()->getCardValidity()))) ?></strong>
+                            <?php endif;?>
+                        </li>
                         <li><span><?php echo $this->__("Points")?></span><strong><?php echo $this->htmlEscape($this->getCustomer()->getUsePoints()) ?></strong></li>
                         <li><span><?php echo $this->__("E coupon")?></span><strong><?php echo $this->htmlEscape($this->getCustomer()->getEcoupon()) ?></strong></li>
                     </ul>
